sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:19: error: 'while' expected but '}' found.
}while(ecart>1 || inversement=true ) 
^AlgCombSort:19: error: ';' expected but 'while' found.
}while(ecart>1 || inversement=true ) 
 ^